--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta
+      name="description"
+      content="Discover and Shop products at UkExpress.co.uk from Home through Food, Clothing and Wearables to Motorbikes. Enjoy Free Shipping and Returns on All offers."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UkExpress</title>
   </head>
