--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/images/ukexpress-logo.png"
+      href="/src/assets/images/ukexpress-logo.svg"
     />
     <meta
       name="description"
