Move the document icon into the public folder

--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/images/ukexpress-logo.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/ukexpress-logo.png" />
     <meta
       name="description"
       content="Discover and Shop products at UkExpress.co.uk from Home through Food, Clothing and Wearables to Motorbikes. Enjoy Free Shipping and Returns on All offers."
